# sloplint

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  pyproject.toml  rust-toolchain.toml  sloplint.toml
bench/: .gitignore  (+9 more)
crates/sloplint/: Cargo.toml
crates/sloplint/fixtures/: cognitive.py  comment_deodorant.py  comment_padding.py  docstring_drift.py  example_scaffolding.py  gapped_clone.py  god_class.py  passthrough.py  placeholder_residue.py  single_use_class.py
crates/sloplint/fixtures/mirror_project/: test_widgets.py  widgets.py
crates/sloplint/fixtures/semantic_clone/: score.py  tally.py
crates/sloplint/src/: args.rs  badges.rs  churn.rs  commands.rs  compute.rs  corrupted.rs  cross_file.rs  discover.rs  gates.rs  ghost.rs  hook.rs  init.rs  main.rs  output.rs  results.rs  rule_docs.rs  single_use.rs  test_mirroring.rs
crates/sloplint/src/commands/: check.rs  metrics.rs
crates/sloplint/src/output/: json.rs  markdown.rs  table.rs
crates/sloplint/tests/: agent_loop_cli.rs  churn_cli.rs  ck_class_metrics_cli.rs  cli_assertion_free.rs  cli_deep_data_nesting.rs  cli_unfinished_stub.rs  clone_coverage_cli.rs  clone_density_cli.rs  cognitive_cli.rs  comment_deodorant_cli.rs  comment_padding_cli.rs  comment_tells_cli.rs  concentration_cli.rs  corrupted_cli.rs  cross_language_cli.rs  docstring_coverage_cli.rs  docstring_drift_cli.rs  example_scaffolding_cli.rs  exception_hygiene_cli.rs  fanout_cli.rs  fix_cli.rs  gapped_clone_cli.rs  generated_profile_cli.rs  ghost_cli.rs  god_class_cli.rs  metrics_badges_cli.rs  metrics_cli.rs  mock_data_cli.rs  module_size_cli.rs  noc_cli.rs  package_abstractness_cli.rs  package_graph_cli.rs  param_count_cli.rs  passthrough_cli.rs  phantom_guard_cli.rs  placeholder_cli.rs  profiles_cli.rs  readme_rules.rs  rule_cli.rs  scope_partition_cli.rs  (+8 more)
crates/sloplint/tests/fixtures/: clone_coverage.py  cyclomatic.py  docstrings.py
crates/sloplint/tests/fixtures/ck_class_metrics/: base.py  shapes.py
crates/sloplint/tests/fixtures/generated_profile/proto/: thing_pb2.py
crates/sloplint/tests/fixtures/generated_profile/src/: openapi_client.py
crates/sloplint/tests/fixtures/package_abstractness/core/: util.py
crates/sloplint/tests/fixtures/package_abstractness/iface/: shapes.py
crates/sloplint/tests/fixtures/package_abstractness/impl/: circle.py
crates/sloplint/tests/fixtures/package_abstractness/mixed/: things.py
crates/sloplint/tests/fixtures/package_graph/: top.py
crates/sloplint/tests/fixtures/package_graph/proj/: a.py  b.py  c.py
crates/sloplint/tests/fixtures/package_graph/proj/sub/: helper.py
crates/sloplint/tests/fixtures/scope_partition/app/: core.py
crates/sloplint/tests/fixtures/scope_partition/tests/: test_core.py
crates/sloplint/tests/fixtures/test_proxies/src/: calc.py
crates/sloplint/tests/fixtures/test_proxies/tests/: test_calc.py
crates/sloplint/tests/resources/: assertion_free_demo.py  deep_data_nesting_demo.py  unfinished_stub_demo.py
crates/sloplint_linter/: Cargo.toml
crates/sloplint_linter/resources/test/fixtures/cohesion/: SLP120.py  SLP120_threshold.py
crates/sloplint_linter/resources/test/fixtures/comments/: SLP001.py  SLP002.py  SLP003.py  SLP004.py  SLP010.py  SLP050.py
crates/sloplint_linter/resources/test/fixtures/crosslang/: SLP250.py
crates/sloplint_linter/resources/test/fixtures/docstrings/: SLP130.py
crates/sloplint_linter/resources/test/fixtures/internal/: SLP000.py
crates/sloplint_linter/resources/test/fixtures/overengineering/: SLP110.py
crates/sloplint_linter/resources/test/fixtures/padding/: SLP150.py
crates/sloplint_linter/resources/test/fixtures/placeholders/: SLP100.py  SLP230.py
crates/sloplint_linter/resources/test/fixtures/scaffolding/: SLP140.py
crates/sloplint_linter/resources/test/fixtures/security/: SLP210.py
crates/sloplint_linter/resources/test/fixtures/structure/: SLP030.py  SLP034.py  SLP040.py  SLP060.py  SLP082.py  SLP084.py  SLP084_threshold.py  SLP130.py  SLP130_threshold.py
crates/sloplint_linter/resources/test/fixtures/test_quality/: SLP070.py
crates/sloplint_linter/src/: ast_util.rs  clones.rs  codes.rs  config.rs  corrupted.rs  detect.rs  fanout.rs  ghost.rs  imports.rs  lib.rs  lint.rs  registry.rs  stdlib.rs  suppression.rs  testing.rs  words.rs
crates/sloplint_linter/src/checkers/: ast.rs  filesystem.rs  mod.rs  physical_lines.rs  tokens.rs
crates/sloplint_linter/src/config/: model.rs  profile.rs  selector.rs
crates/sloplint_linter/src/imports/: dist.rs  findings.rs  manifest.rs  scan.rs
crates/sloplint_linter/src/rules/: mod.rs
crates/sloplint_linter/src/rules/cohesion/: god_class.rs  mod.rs
crates/sloplint_linter/src/rules/comments/: ascii_only.rs  comment_deodorant.rs  comment_policy.rs  comment_tells.rs  mod.rs  redundant_comment.rs  redundant_docstring.rs
crates/sloplint_linter/src/rules/crosslang/: cross_language.rs  mod.rs
crates/sloplint_linter/src/rules/docstrings/: docstring_drift.rs  mod.rs
crates/sloplint_linter/src/rules/duplication/: mod.rs
crates/sloplint_linter/src/rules/overengineering/: mod.rs  passthrough_wrapper.rs
crates/sloplint_linter/src/rules/padding/: comment_blank_padding.rs  mod.rs
crates/sloplint_linter/src/rules/placeholders/: leftover_placeholder.rs  mock_data.rs  mod.rs
crates/sloplint_linter/src/rules/scaffolding/: example_scaffolding.rs  mod.rs
crates/sloplint_linter/src/rules/security/: mod.rs  phantom_guard.rs
crates/sloplint_linter/src/rules/structure/: deep_data_nesting.rs  deep_nesting.rs  defensive_except.rs  dispatch_ladder.rs  mod.rs  oversized_file.rs  redundant_type_hint.rs  unfinished_stub.rs  verbose_naming.rs
crates/sloplint_linter/src/rules/test_quality/: assertion_free.rs  mod.rs
crates/sloplint_linter/src/snapshots/: sloplint_linter__testing__tests__example_todo.snap
crates/sloplint_linter/tests/: corpus.rs
crates/sloplint_python/: Cargo.toml
crates/sloplint_python/benches/: parse.rs
crates/sloplint_python/src/: collect.rs  docstring.rs  lib.rs
crates/sloplint_report/: Cargo.toml
crates/sloplint_report/src/: lib.rs
(+142 files in other folders)
