[package]
name = "sloplint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A nitpicking linter that counters AI slop in Python. Runs after Ruff."

[[bin]]
name = "sloplint"
path = "src/main.rs"

[dependencies]
sloplint_python.workspace = true
sloplint_linter.workspace = true
sloplint_diagnostics.workspace = true
sloplint_clone.workspace = true
sloplint_metrics.workspace = true
sloplint_report.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
toml = "0.8"
ignore = "0.4"
