[package]
name = "sloplint_linter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The linter crate: all sloplint rules and the core logic for running them (cf. ruff_linter)."

[dependencies]
sloplint_python.workspace = true
sloplint_diagnostics.workspace = true
sloplint_macros.workspace = true
sloplint_metrics.workspace = true
sloplint_clone.workspace = true
serde.workspace = true
toml.workspace = true
globset = "0.4"

[dev-dependencies]
insta.workspace = true
