[package]
name = "sloplint_python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin wrappers over Ruff's Python parser: AST + token-stream access and AST normalization."

[dependencies]
ruff_python_parser.workspace = true
ruff_python_ast.workspace = true
ruff_text_size.workspace = true
ruff_source_file.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parse"
harness = false

